modify by leetcode changed